fix(nuxt): Add some spacing around `SFModal.vue` on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -17,7 +17,7 @@
   }
 
   dialog {
-    max-width: 100vw;
-    max-height: 100vh;
+    max-width: 94vw;
+    max-height: 94vh;
   }
 }
